--- a/SingleStationClimateHeatmap.ipynb
+++ b/SingleStationClimateHeatmap.ipynb
@@ -269,18 +269,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 325,
+   "execution_count": 340,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Longest run  above average: 5\n",
-      "The(se) longest run(s) initiated at: [['Jul' '1995']\n",
+      "Longest run(s) above average: 5\n",
+      "The(se) longest run(s) initiated on:\n",
+      "[['Jul' '1995']\n",
       " ['Oct' '1998']\n",
       " ['Oct' '2009']]\n",
-      "The(se) longest run(s) initiated at: [244 271 359]\n"
+      "These runs start on Mar and roll over to the following year at the conclusion of Oct.\n"
      ]
     }
    ],
@@ -288,10 +289,9 @@
     "#skip seasons to find streches of extended +/- departures\n",
     "\n",
     "monthMin = 3 #1:Jan, 12:Dec\n",
-    "monthMax = 11\n",
+    "monthMax = 11 #EXCLUSIVE maximum month\n",
     "yearMin = 1965\n",
     "yearMax = 2021\n",
-    "\n",
     "\n",
     "\n",
     "years = xLabels\n",
@@ -312,10 +312,10 @@
     "runStarts1 = runStarts[runVals1]\n",
     "runLengths1 = runLengths[runVals1]\n",
     "\n",
-    "print(f'Longest run  above average: {max(runLengths1)}')\n",
+    "print(f'Longest run(s) above average: {max(runLengths1)}')\n",
     "#print(f'The(se) longest run(s) initiated at: {np.where(runLengths==max(runLengths))}')\n",
-    "print(f'The(se) longest run(s) initiated at: {dates[runStarts1[np.where(runLengths1 == max(runLengths1))]]}')\n",
-    "print(f'The(se) longest run(s) initiated at: {runStarts1[np.where(runLengths1 == max(runLengths1))]}')"
+    "print(f'The(se) longest run(s) initiated on:\\n{dates[runStarts1[np.where(runLengths1 == max(runLengths1))]]}')\n",
+    "print(f'These runs start on {yLabels[monthMin-1]} and roll over to the following year at the conclusion of {yLabels[monthMax-2]}.')"
    ]
   },
   {
