--- a/SingleStationClimateHeatmap.ipynb
+++ b/SingleStationClimateHeatmap.ipynb
@@ -266,18 +266,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 348,
+   "execution_count": 351,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Longest run(s) above average: 5\n",
+      "Longest run(s) above average: 8\n",
       "The(se) longest run(s) initiated on:\n",
-      "[['Jul' '1995']\n",
-      " ['Oct' '1998']\n",
-      " ['Oct' '2009']]\n",
+      "[['Aug' '1979']]\n",
       "These runs start on Mar and roll over to the following year at the conclusion of Oct.\n"
      ]
     }
@@ -297,14 +295,14 @@
     "dates = np.array(list(zip(mmonths, yyears))).T\n",
     "dates = np.array([x.T for x in dates[:]])\n",
     "dates = dates.reshape(len(years),len(months), 2)[:,monthMin-1:monthMax-1,:]\n",
-    "dates = dates.reshape(dates.shape[0]*dates.shape[1], 2) #years is multiplied by # of months sliced\n",
+    "dates = dates.reshape(dates.shape[0]*dates.shape[1], 2) #    # of years is multiplied by # of months sliced\n",
     "#print(dates[:20])\n",
     "\n",
     "meanDepartsFilter = np.nan_to_num(meanDeparts, nan=-999)\n",
     "meanDepartsFilter = meanDepartsFilter[:,monthMin-1:monthMax-1]\n",
-    "aboveAvg = np.where(meanDepartsFilter.flatten(order='C')> 0.0, 1, 0)\n",
+    "extDev = np.where(meanDepartsFilter.flatten(order='C')< 0.0, 1, 0) #flip the comparitor to swap between periods of wet (>) vs dry(<)\n",
     "\n",
-    "runVals, runStarts, runLengths = find_runs(aboveAvg)\n",
+    "runVals, runStarts, runLengths = find_runs(extDev)\n",
     "runVals1 = np.where(runVals==1)\n",
     "runStarts1 = runStarts[runVals1]\n",
     "runLengths1 = runLengths[runVals1]\n",
